find_package(CSOUND)
if(NOT CSOUND_INCLUDE_DIRS)
message(status "Csound header files not found; not building opcodes")
else()
add_library(cl_conv_opc SHARED opcode.cpp)
target_link_libraries(cl_conv_opc  cl_conv)
target_include_directories(cl_conv_opc PRIVATE ${CSOUND_INCLUDE_DIR} ${CMAKE_SOURCE_DIR})
set_property(TARGET cl_conv_opc PROPERTY CXX_STANDARD 11)
endif()
